# tp-apihtml-docker-server

./: README.md  db.env  guia-comandos.txt
python-flask/: Dockerfile  app.py  requerimientos.txt
rust-actixweb/: Cargo.toml  Dockerfile
rust-actixweb/src/: main.rs
